# pr2_gripper_sensor

pr2_gripper_sensor_gui/: CMakeLists.txt  package.xml  pr2_gripper_sensor_gui_plugin.xml  setup.py
pr2_gripper_sensor_gui/scripts/pr2_gripper_sensor_gui/: gui.py
pr2_gripper_sensor_gui/src/: marker_visualization.cpp
pr2_gripper_sensor_gui/uis/: Pr2GripperSensorGui.ui
