<?xml version="1.0"?>
<package>
  <name>pr2_gripper_sensor_gui</name>
  <version>0.0.0</version>
  <description>The pr2_gripper_sensor package</description>

  <maintainer email="ros-orphaned-packages@googlegroups.com">ROS Orphaned Package Maintainers</maintainer>
  <author email="jonetzko@informatik.uni-hamburg.de">Yannick Jonetzko</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rqt_gui</build_depend>
  <build_depend>rqt_gui_py</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>pr2_gripper_sensor_msgs</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>rqt_gui_py</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>pr2_gripper_sensor_msgs</run_depend>

  <export>
    <rqt_gui plugin="${prefix}/pr2_gripper_sensor_gui_plugin.xml"/>
  </export>
</package>
